Some adjustments on the hypervisor execution.

--- a/coremark/PIC32MZ_NATIVE/makefile
+++ b/coremark/PIC32MZ_NATIVE/makefile
@@ -27,10 +27,10 @@ XCFLAGS = -DPERFORMANCE_RUN=1
 XLFLAGS = -lrt -static
 FLAGS_STR = "$(PORT_CFLAGS) $(XCFLAGS) $(XLFLAGS) $(LFLAGS_END)"
 CFLAGS  = $(PORT_CFLAGS) $(IPATH) -DFLAGS_STR=\"$(FLAGS_STR)\"
-CFLAGS += -DITERATIONS=0 
+CFLAGS += -DITERATIONS=0
 CFLAGS += $(XCFLAGS)
 
-GCCFLAGS= -EL $(CFLAGS) -DMEM_METHOD=MEM_STATIC -DNATIVE -DHAS_PRINTF -DMAIN_HAS_NOARGC -DLITTLE_ENDIAN -DITERATIONS=0  -finline-limit=200 -fselective-scheduling -falign-jumps=4 -falign-loops=4 -DCPU_SPEED=$(CPU_SPEED) $(XCFLAGS) -DPIC32MZ -c -Wno-unused-result -Wno-pointer-to-int-cast -mips32r2 -mtune=m14k -mno-check-zero-division -msoft-float -fshort-double -ffreestanding -nostdlib -fomit-frame-pointer -G 0  
+GCCFLAGS= -EL $(CFLAGS) -DMEM_METHOD=MEM_STATIC -DNATIVE -DHAS_PRINTF -DMAIN_HAS_NOARGC -DLITTLE_ENDIAN -finline-limit=200 -fselective-scheduling -falign-jumps=4 -falign-loops=4 -DCPU_SPEED=$(CPU_SPEED) $(XCFLAGS) -DPIC32MZ -c -Wno-unused-result -Wno-pointer-to-int-cast -mips32r2 -mtune=m14k -mno-check-zero-division -msoft-float -fshort-double -ffreestanding -nostdlib -fomit-frame-pointer -G 0  
 
 
 
